feat: implement HTML view rendering and document legacy vs modern comparison (12단계)